<resources>
    <string name="app_name">Memllo</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="user_name">User name</string>
    <string name="or">--------------------OR--------------------</string>
    <string name="create_a_new_account">CREATE NEW ACCOUNT</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in">Sign In</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Shoping">Shoping</string>
    <string name="title_activity_messaging">MessagingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>